--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/kata231
+spring.datasource.url=jdbc:mysql://localhost:3306/kata311
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=validate
